test/corpus/knot.txt
=========
Just body
=========

hell
hell

--------------------------------------------------------------------------------

===========
Single knot
===========

=== teäst ===

--------------------------------------------------------------------------------

(program
  (knot
    (knot_start)
    name: (identifier)
    (rest)))

===========
Next knot
===========

=== test ===
=== test ===

--------------------------------------------------------------------------------

(program
  (knot
    (knot_start)
    (identifier)
    (rest))
  (knot
    (knot_start)
    (identifier)
    (rest)))

=================
Knot and stitches
=================

=== test ===
=== test ===
 = bla
= fasel

--------------------------------------------------------------------------------

(program
  (knot
    (knot_start)
    (identifier)
    (rest))
  (knot
    (knot_start)
    (identifier)
    (rest)
    (body
      (stitch
        (stitch_start)
        (identifier))
      (stitch
        (stitch_start)
        (identifier)))))

=====================
Knot with simple body
=====================

=== test ===
body
=== test ===

--------------------------------------------------------------------------------

(program
  (knot
    (knot_start)
    (identifier)
    (rest)
    (body
      (dialog
        (text))))
  (knot
    (knot_start)
    (identifier)
    (rest)))

===================
Knot with code body
===================

=== test ===
body {func{}} bla {x} asdf
=== test ===

--------------------------------------------------------------------------------

(program
  (knot
    (knot_start)
    (identifier)
    (rest)
    (body
      (dialog
        (text)
        (inline_logic)
        (text)
        (inline_logic)
        (text))))
  (knot
    (knot_start)
    (identifier)
    (rest)))

======
Divert
======

asdf-sdf -> test
=== test ===
test

--------------------------------------------------------------------------------

(program
  (body
    (dialog
      (text)
      (text)
      (divert
        (divert_start)
        (identifier))))
  (knot
    (knot_start)
    (identifier)
    (rest)
    (body
      (dialog
        (text)))))

==============
Illegal divert
==============

asdsdf -> test asdf
=== test ===
test

--------------------------------------------------------------------------------

(program
  (body
    (dialog
      (text)
      (divert
        (divert_start)
        (identifier))))
  (ERROR
    (UNEXPECTED ' ')
    (identifier))
  (knot
    (knot_start)
    (identifier)
    (rest)
    (body
      (dialog
        (text)))))

===========
End newline
===========

=== teet ===


--------------------------------------------------------------------------------

(program
  (knot
    (knot_start)
    (identifier)
    (rest)
    (body
      (dialog))))

=========
End space
=========

=== teet ===
 

--------------------------------------------------------------------------------

(program
  (knot
    (knot_start)
    (identifier)
    (rest)
    (body
      (dialog
        (text)))))

==========
Empty line
==========

=== teet ===
a

b

--------------------------------------------------------------------------------

(program
  (knot
    (knot_start)
    (identifier)
    (rest)
    (body
      (dialog
        (text)
        (text)))))
